<resources>
    <string name="app_name">Quickdel</string>
    <string name="title_activity_place_quickdel">PlaceQuickdel</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="product_quantity">Product and Quantity</string>
    <string name="merchant_name">Merchant Name</string>
    <string name="estimated_amount">Estimated Amount</string>
    <string name="merchant_address">Merchant Address</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password2">Password2</string>
    <string name="prompt_phone">Phone</string>
    <string name="order">order</string>
    <string name="confirm">Confirm</string>
    <string name="edit">Edit</string>
    <string name="title_activity_customer_settings">CustomerSettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="LogOut">Log Out</string>
    <string name="title_activity_online">Online</string>
    <string name="title_activity_current_location">CurrentLocation</string>
    <string name="GetLocation">Show Address</string>
    <string name="LocationDisplay">Location Display</string>
    <string name="Latitude">Latitude</string>
    <string name="Longitude">Longitude</string>
    <string name="title_activity_driver_home">DriverHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="first_name">First Name</string>
    <string name="last_name">last Name</string>
    <string name="continue_text">Continue</string>
    <string name="register_text">Let\'s create your account</string>


    <string name="medicines">Medicines</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="goods">Goods</string>
    <string name="airports">Airports</string>


    <string name="easy_steps">Three Easy Steps</string>
    <string name="steps_description">Have anything delivered without leaving your home in just three easy steps</string>
    <string name="steps_description_runner">Deliver Quickdels by completeing the following steps</string>
    <string name="options_available">Vehicle Choices</string>
    <string name="benefits">Benefits</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>