<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UsersHome2">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:theme="@style/navigationTheme"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu" />

    <LinearLayout
        android:id="@+id/contentview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home_background"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:src="@drawable/menu" />


        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/app_name"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:transitionName="logo_image"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/quickdeltext2"
                        android:fontFamily="@font/cherry_cream_soda"
                        android:text=""
                        android:textSize="28sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_below="@+id/app_name"
                        android:layout_marginLeft="40dp"
                        android:transitionName="logo_text"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="40dp"
                        android:layout_marginBottom="20dp"
                        android:background="@color/white"
                        android:elevation="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp"
                            android:text="@string/search_text" />

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="15dp"
                            android:src="@drawable/search" />

                    </RelativeLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:transitionName="logo_desc"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="58dp"
                            android:layout_height="58dp"
                            android:layout_margin="8dp"
                            android:background="@color/home4"
                            android:clickable="true"
                            android:elevation="8dp"
                            android:onClick="openPlaceQuickdelActivity">

                            <ImageView
                                android:layout_width="90dp"
                                android:layout_height="90dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/chita_day" />

                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/prompt_regular"
                            android:gravity="center_horizontal"
                            android:text="Place"
                            android:textAlignment="center" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="58dp"
                            android:layout_height="58dp"
                            android:layout_margin="8dp"
                            android:background="@color/home1"
                            android:elevation="8dp"
                            android:onClick="openTrackRunner">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/ic_baseline_location_on_24" />

                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/prompt_regular"
                            android:gravity="center_horizontal"
                            android:text="Track"
                            android:textAlignment="center" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="58dp"
                            android:layout_height="58dp"
                            android:layout_margin="8dp"
                            android:background="@color/home5"
                            android:clickable="true"
                            android:elevation="8dp"
                            android:onClick="openOrderHistory">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/ic_baseline_history_24" />

                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/prompt_regular"
                            android:gravity="center_horizontal"
                            android:text="History"
                            android:textAlignment="center" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="58dp"
                            android:layout_height="58dp"
                            android:layout_margin="8dp"
                            android:background="@color/home6"
                            android:elevation="8dp"
                            android:onClick="openCustomerSettings">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/settings3" />

                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/prompt_regular"
                            android:gravity="center_horizontal"
                            android:text="Settings"
                            android:textAlignment="center" />


                    </LinearLayout>

                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/quantum_grey300">

                    <LinearLayout
                        android:id="@+id/featured_background"
                        android:layout_width="170dp"
                        android:layout_height="280dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/quantum_grey400"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="50dp"
                            android:fontFamily="@font/prompt_semi_bold"
                            android:text="@string/easy_steps"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="25dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:fontFamily="@font/prompt_regular"
                            android:text="@string/steps_description"
                            android:textColor="@color/black" />


                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/featured_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_toRightOf="@+id/featured_background"
                        android:background="@color/home_background" />


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/prompt_semibold_italic"
                            android:text="@string/options_available"
                            android:textAllCaps="true"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:fontFamily="@font/prompt_semibold_italic"
                            android:text="@string/view_all" />

                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/mv_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="170dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/prompt_semibold_italic"
                            android:text="@string/benefits"
                            android:textAllCaps="true"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:text="@string/view_all" />

                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/categories_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="170dp" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>